logs/dag_id=weather_data_pipeline/run_id=manual__2024-06-28T100417.821117+0000/task_id=predict_weather/attempt=2.log
[2024-06-28T10:14:37.136+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-06-28T10:14:37.157+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: weather_data_pipeline.predict_weather manual__2024-06-28T10:04:17.821117+00:00 [queued]>
[2024-06-28T10:14:37.165+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: weather_data_pipeline.predict_weather manual__2024-06-28T10:04:17.821117+00:00 [queued]>
[2024-06-28T10:14:37.166+0000] {taskinstance.py:2306} INFO - Starting attempt 2 of 2
[2024-06-28T10:14:37.180+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): predict_weather> on 2024-06-28 10:04:17.821117+00:00
[2024-06-28T10:14:37.187+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=300) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-06-28T10:14:37.188+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'weather_data_pipeline', 'predict_weather', 'manual__2024-06-28T10:04:17.821117+00:00', '--job-id', '91', '--raw', '--subdir', 'DAGS_FOLDER/weather_dag.py', '--cfg-path', '/tmp/tmpicbofcra']
[2024-06-28T10:14:37.189+0000] {standard_task_runner.py:63} INFO - Started process 314 to run task
[2024-06-28T10:14:37.190+0000] {standard_task_runner.py:91} INFO - Job 91: Subtask predict_weather
[2024-06-28T10:14:37.252+0000] {task_command.py:426} INFO - Running <TaskInstance: weather_data_pipeline.predict_weather manual__2024-06-28T10:04:17.821117+00:00 [running]> on host 2c6a05abce91
[2024-06-28T10:14:37.351+0000] {abstractoperator.py:725} ERROR - Exception rendering Jinja template for task 'predict_weather', field 'op_kwargs'. Template: {'file_path': "{{ task_instance.xcom_pull(task_ids='fetch_weather_data'}}", 'model_path': './temperature_prediction_model.pkl'}
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/abstractoperator.py", line 717, in _do_render_template_fields
    rendered_content = self.render_template(
                       ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/template/templater.py", line 181, in render_template
    return {k: self.render_template(v, context, jinja_env, oids) for k, v in value.items()}
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/template/templater.py", line 168, in render_template
    template = jinja_env.from_string(value)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 1108, in from_string
    return cls.from_code(self, self.compile(source), gs, None)
                               ^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 939, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "<unknown>", line 1, in template
jinja2.exceptions.TemplateSyntaxError: unexpected '}', expected ')'
[2024-06-28T10:14:37.354+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 2479, in _run_raw_task
    self._execute_task_with_callbacks(context, test_mode, session=session)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 2633, in _execute_task_with_callbacks
    task_orig = self.render_templates(context=context, jinja_env=jinja_env)
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3094, in render_templates
    original_task.render_template_fields(context, jinja_env)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 1337, in render_template_fields
    self._do_render_template_fields(self, self.template_fields, context, jinja_env, set())
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/abstractoperator.py", line 717, in _do_render_template_fields
    rendered_content = self.render_template(
                       ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/template/templater.py", line 181, in render_template
    return {k: self.render_template(v, context, jinja_env, oids) for k, v in value.items()}
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/template/templater.py", line 168, in render_template
    template = jinja_env.from_string(value)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 1108, in from_string
    return cls.from_code(self, self.compile(source), gs, None)
                               ^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "/home/airflow/.local/lib/python3.12/site-packages/jinja2/environment.py", line 939, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "<unknown>", line 1, in template
jinja2.exceptions.TemplateSyntaxError: unexpected '}', expected ')'
[2024-06-28T10:14:37.365+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=weather_data_pipeline, task_id=predict_weather, run_id=manual__2024-06-28T10:04:17.821117+00:00, execution_date=20240628T100417, start_date=20240628T101437, end_date=20240628T101437
[2024-06-28T10:14:37.383+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 91 for task predict_weather (unexpected '}', expected ')'; 314)
[2024-06-28T10:14:37.405+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-06-28T10:14:37.420+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-06-28T10:14:37.424+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
